added back functionality on detail page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="shortcut icon" href="https://eatpilinuts.com/cdn/shop/files/dark-logo-grn_62b46d0f-4035-4176-b5a4-c92aeb29aa62_340x.png?v=1630576859" type="image/x-icon">
+
+    <title>Pili Hunters</title>
   </head>
   <body>
     <div id="root"></div>
